@@ -9,8 +9,16 @@ appicon_DATA = devhelp.png
 svgicondir = $(datadir)/icons/hicolor/scalable/apps
 svgicon_DATA = devhelp.svg
 
+gtk_update_icon_cache = gtk-update-icon-cache -f -t $(datadir)/icons/hicolor
+
 install-data-hook:
-	gtk-update-icon-cache -f -t $(datadir)/icons/hicolor || :
+	@-if test -z "$(DESTDIR)"; then \
+		echo "Updating Gtk icon cache."; \
+		$(gtk_update_icon_cache); \
+	else \
+		echo "*** Icon cache not updated.  After install, run this:"; \
+		echo "***   $(gtk_update_icon_cache)"; \
+	fi
 
 uidir = $(datadir)/devhelp/ui
 ui_DATA = 				\
