@@ -1,3 +1,7 @@
+2006-03-26  Behdad Esfahbod  <behdad@gnome.org>
+
+	* ui/Makefile.am: Respect DESTDIR.
+
 2006-03-18  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>
 
 	* configure.in: Added "zh_HK" to ALL_LINGUAS.
